[package]
name = "astrotools"
version = "0.1.1"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
regex = "1"
csv = "1"
rocket_contrib = "0.4.0"
rocket_codegen = "0.4.0"
serde_derive = "1.0"
serde = "1.0.89"
serde_json = "1.0.39"
glob = "0.3.0"
gnuplot = "0.0.29"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
